discussion/kv_engine/183265/183265_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54516: Drop ModifyCollection events

If a collection is dropped, the modify event must be purged
along with any normal collection items. All of the dropKey
paths were setup to ignore any system events, this is no
longer true with the new event.

Change-Id: Ia89d4b7a56e9f3b5b23dd176e5d00da88bd83f3e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-29 09:32:42.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-29 09:33:17.000000000
Message: 
Patch Set 4: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/326874/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-29 10:16:32.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/619/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23: error: use of undeclared identifier "SystemEventFactory" [clang-diagnostic-error]
        auto modify = SystemEventFactory::isModifyCollection(key);
                      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/619/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/619/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/595/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: no member named "getEventView" in "SystemEventConsumerMessage"; did you mean "getEventData"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/595/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/781/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/collections/scan_context.cc(38): error C2653: "SystemEventFactory": is not a class or namespace name ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/781/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/641/ : FAILURE

Compile error at [2022-11-29T09:58:44.344Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: ?const class SystemEventConsumerMessage? has no member named ?getEventView?; did you mean ?getEventData??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/641/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/628/ : FAILURE

Compile error at [2022-11-29T09:58:13.586Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: no member named "getEventView" in "SystemEventConsumerMessage"; did you mean "getEventData"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/628/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/619/ : FAILURE

Compile error at [2022-11-29T09:40:08.070Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: ?SystemEventFactory? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/619/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/878/ : FAILURE

Compile error at [2022-11-29T09:37:47.457Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: no member named "getEventView" in "SystemEventConsumerMessage"; did you mean "getEventData"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/878/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/629/ : FAILURE

Compile error at [2022-11-29T10:15:56.221Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: ?SystemEventFactory? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/629/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/611/ : FAILURE

Compile error at [2022-11-29T09:51:33.914Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/dcp/passive_stream.cc:1038:31:
error: no member named "getEventView" in "SystemEventConsumerMessage"; did you mean "getEventData"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/611/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/638/ : FAILURE

Compile error at [2022-11-29T09:43:02.582Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/638/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21519/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
